corrigindo erro das imagens

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
   <div class="nav">
     <div class="logo">
-      <img class="titulo" src="/img/bikcraft.svg" alt="ícone bikcraft">
+      <img class="titulo" src="./img/bikcraft.svg" alt="ícone bikcraft">
     </div>
     <ul class="nav-flexbox">
       <li><a href="/">sobre</a></li>
@@ -26,18 +26,18 @@
       <p class="descricao">A Nimbus Stark é a melhor Bikcraft já criada pela nossa equipe. Ela vem equipada com os melhores acessórios da marca.</p>
       <a class="botao-saiba" href="/">ver mais</a>
     </div>
-    <img class="main-image" src="/img/bicicleta.jpg" alt="Bicicleta Preta Bikcraft">
+    <img class="main-image" src="./img/bicicleta.jpg" alt="Bicicleta Preta Bikcraft">
     <div class="div-texto-grande">
       <h1 class="texto-grande">Vantagens Bikcraft</h1>
     </div>
     <div class="flex">
-      <img src="/img/eletrica.svg" alt="">
+      <img src="./img/eletrica.svg" alt="">
       <p class="titulo-menu">Motor Elétrico</p>
       <p class="descricao-menu">Permite você viajar distâncias inimaginaveis com a sua bike.</p>
-      <img src="/img/velocidade.svg" alt="">
+      <img src="./img/velocidade.svg" alt="">
       <p class="titulo-menu">40 km/h</p>
       <p class="descricao-menu">A mais rápida bicicleta elétrica disponível hoje no mercado.</p>
-      <img src="/img/rastreador.svg" alt="">
+      <img src="./img/rastreador.svg" alt="">
       <p class="titulo-menu">Rastreador</p>
       <p class="descricao-menu">Rastreador e sistema anti-furto para garantir o seu sossego.</p>
     </div>
