--- a/index.html
+++ b/index.html
@@ -1,48 +1,61 @@
 <!DOCTYPE html>
-<html lang="pt-br">
+<html lang="en">
 
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Bikecraft</title>
+  <title>Bikcraft</title>
   <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
-  <div class="nav">
-    <div class="logo">
-      <img class="titulo" src="./img/bikcraft.svg" alt="ícone bikcraft">
-    </div>
-    <ul class="nav-flexbox">
-      <li><a href="/">sobre</a></li>
-      <li><a href="/">produtos</a></li>
-      <li><a href="/">lojas</a></li>
-      <li><a href="/">Contato</a></li>
-    </ul>
-  </div>
-  <div class="grid">
-    <div class="info">
-      <h1 class="subtitulo">Bicicletas Feitas a Mão</h1>
-      <p class="descricao">A Nimbus Stark é a melhor Bikcraft já criada pela nossa equipe. Ela vem equipada com os melhores acessórios da marca.</p>
-      <a class="botao-saiba" href="/">ver mais</a>
-    </div>
-    <img class="main-image" src="./img/bicicleta.jpg" alt="Bicicleta Preta Bikcraft">
-    <div class="div-texto-grande">
-      <h1 class="texto-grande">Vantagens Bikcraft</h1>
-    </div>
-    <div class="flex">
-      <img src="./img/eletrica.svg" alt="">
-      <p class="titulo-menu">Motor Elétrico</p>
-      <p class="descricao-menu">Permite você viajar distâncias inimaginaveis com a sua bike.</p>
-      <img src="./img/velocidade.svg" alt="">
-      <p class="titulo-menu">40 km/h</p>
-      <p class="descricao-menu">A mais rápida bicicleta elétrica disponível hoje no mercado.</p>
-      <img src="./img/rastreador.svg" alt="">
-      <p class="titulo-menu">Rastreador</p>
-      <p class="descricao-menu">Rastreador e sistema anti-furto para garantir o seu sossego.</p>
-    </div>
-  </div>
-  <footer>
+  <header class="header">
+    <img src="/img/bikcraft.svg" alt="logo Bikcraft">
+
+    <nav>
+      <ul class="menu">
+        <li><a href="/">Sobre</a></li>
+        <li><a href="/">Produtos</a></li>
+        <li><a href="/">Lojas</a></li>
+        <li><a href="/">Contato</a></li>
+      </ul>
+    </nav>
+  </header>
+
+  <main>
+    <article class="conteudo">
+      <div class="introducao">
+        <h1>Bicicletas Feitas a Mão</h1>
+        <p>A Nimbus Stark é a melhor Bikcraft já criada pela nossa equipe. Ela vem equipada com os melhores acessórios da marca.</p>
+        <a class="botao" href="/">Ver Mais</a>
+      </div>
+      <img src="/img/bicicleta.jpg" alt="bicicleta bikcraft preta">
+    </article>
+
+    <article class="conteudo">
+      <h2 class="subtitulo">Vantagens Bikcraft</h2>
+
+      <ul class="vantagens">
+        <li class="vantagens-item">
+          <img src="/img/eletrica.svg" alt="">
+          <h3>Moto Elétrico</h3>
+          <p>Permite você viajar distâncias inimaginaveis com a sua bike.</p>
+        </li>
+        <li class="vantagens-item">
+          <img src="/img/velocidade.svg" alt="">
+          <h3>40 km/h</h3>
+          <p>A mais rápida bicicleta elétrica disponível hoje no mercado.</p>
+        </li>
+        <li class="vantagens-item">
+          <img src="/img/rastreador.svg" alt="">
+          <h3>Rastreador</h3>
+          <p>Rastreador e sistema anti-furto para garantir o seu sossego.</p>
+        </li>
+      </ul>
+    </article>
+  </main>
+
+  <footer class="rodape">
     <p>Bikcraft. Alguns Direitos Reservados.</p>
   </footer>
 </body>
