--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 <body>
   <header class="header">
-    <img src="/img/bikcraft.svg" alt="logo Bikcraft">
+    <img src="./img/bikcraft.svg" alt="logo Bikcraft">
 
     <nav>
       <ul class="menu">
@@ -29,7 +29,7 @@
         <p>A Nimbus Stark é a melhor Bikcraft já criada pela nossa equipe. Ela vem equipada com os melhores acessórios da marca.</p>
         <a class="botao" href="/">Ver Mais</a>
       </div>
-      <img src="/img/bicicleta.jpg" alt="bicicleta bikcraft preta">
+      <img src="./img/bicicleta.jpg" alt="bicicleta bikcraft preta">
     </article>
 
     <article class="conteudo">
@@ -37,17 +37,17 @@
 
       <ul class="vantagens">
         <li class="vantagens-item">
-          <img src="/img/eletrica.svg" alt="">
+          <img src="./img/eletrica.svg" alt="">
           <h3>Moto Elétrico</h3>
           <p>Permite você viajar distâncias inimaginaveis com a sua bike.</p>
         </li>
         <li class="vantagens-item">
-          <img src="/img/velocidade.svg" alt="">
+          <img src="./img/velocidade.svg" alt="">
           <h3>40 km/h</h3>
           <p>A mais rápida bicicleta elétrica disponível hoje no mercado.</p>
         </li>
         <li class="vantagens-item">
-          <img src="/img/rastreador.svg" alt="">
+          <img src="./img/rastreador.svg" alt="">
           <h3>Rastreador</h3>
           <p>Rastreador e sistema anti-furto para garantir o seu sossego.</p>
         </li>
